Fully responsive GigDetails page

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -51,6 +51,7 @@ $arrow-btn-size: 48px;
 $arrow-btn-small-size: 33px;
 $card-carousel-height: 345px;
 $details-carousel-height: 444px;
+$details-carousel-height-mobile: 260px;
 $details-carousel-width: 738px;
 
 // Breakpoints
