--- a/src/assets/styles/cmps/ReviewChart.scss
+++ b/src/assets/styles/cmps/ReviewChart.scss
@@ -1,45 +1,39 @@
-.review-chart{
+.review-chart {
     display: flex;
     flex-direction: column;
     gap: 8px;
     margin-bottom: em(32px);
-  
-    .review-header{
+
+    .review-header {
         margin-bottom: em(13px);
-        h4{
+
+        h4 {
             padding-right: em(12px);
         }
     }
-    // progress{
-    //     width: em(259px);
-    //     border: none;
-    //     // appearance: none; 
-    //     // &::-webkit-progress-bar {
-    //     //    background-color: $light-clr2; /* Change to your desired background color */
-    //     // }
-    //     // &::-webkit-progress-value {
-    //     //    background-color: $dark-clr1; /* Change to your desired progress bar color */
-    //     // }
-    // }
+
     .review-bars-container {
         align-items: center;
         display: grid;
-        grid-template-columns: 4.0625em 17.5em 3em;
+        grid-template-columns: 4.0625em 1fr 3em;
         width: 100%;
-        .review-rate-bar{
+
+        .review-rate-bar {
             background-color: $light-clr2;
             border-radius: 100px;
             height: .5em;
             position: relative;
             width: 96%;
-            span{
+
+            span {
                 background: $dark-clr1;
                 border-radius: 100px;
                 height: 100%;
                 position: absolute;
             }
         }
-        .star-number{
+
+        .star-number {
             font-weight: 600;
         }
     }
