--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -117,7 +117,7 @@
         grid-row: 2;
         position: relative;
         width: 100%;
-        max-width: rem(740px);
+        max-width: $details-carousel-width;
 
         .carousel {
             position: static;
@@ -243,15 +243,16 @@
 
         .cta-container {
             grid-column: 2;
-            grid-row: 3;
+            grid-row: 2;
             position: sticky;
-            top: 12vh;
+            top: 14vh;
             justify-self: end;
             width: em(412px);
         }
 
         .carousel-container {
-            max-width: rem(740px);
+            max-width: $details-carousel-width;
+            ;
 
 
             .carousel {
