--- a/src/assets/styles/views/ReviewIndex.scss
+++ b/src/assets/styles/views/ReviewIndex.scss
@@ -1,14 +1,15 @@
 .review-index {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: rem(50px);
-    margin-top: rem(50px);
+    grid-template-columns: 1fr auto;
+    gap: 12.125rem;
+    margin-top: 3.125rem;
+    padding-inline: 33px;
 
     .add-review {
         display: flex;
         flex-direction: column;
         align-items: start;
-        gap: em(15px);
+        gap: 0.9375em;
 
         .heading {
             color: $dark-clr-4;
@@ -95,14 +96,15 @@
     }
 
     .big-order-preview {
-        width: 60%;
+        width: 26em;
         height: fit-content;
         display: flex;
         flex-direction: column;
-        justify-self: center;
-        border: em(2px) solid $dark-clr-2;
-        padding: em(14px) em(24px);
-        gap: em(10px);
+        justify-self: end;
+        align-self: center;
+        border: 0.125em solid #e5e5e7;
+        padding: 0.875em 1.5em;
+        gap: 0.625em;
 
         .preview-heading {
             text-align: center;
@@ -134,4 +136,46 @@
         }
     }
 
+    @include for-xs-small-layout{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-flow: row;
+        gap: 5px;
+        margin-top: 3.125rem;
+        padding-inline: 0;
+        // place-content: center;
+        .add-review {
+            margin-bottom: 30px;
+        }
+        .big-order-preview {
+            width: auto;
+            place-self: center;
+        }
+        // padding-inline: 33px;
+    }
+    @include for-large-layout{
+        display: grid;
+        grid-template-columns: 1fr auto;
+        gap: 12.125rem;
+        margin-top: 3.125rem;
+        padding-inline: 33px;
+        .add-review {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            gap: 0.9375em;
+        }
+        .big-order-preview {
+            width: 26em;
+            height: fit-content;
+            display: flex;
+            flex-direction: column;
+            justify-self: end;
+            align-self: center;
+            border: 0.125em solid #e5e5e7;
+            padding: 0.875em 1.5em;
+            gap: 0.625em;
+        }
+       
+    }
 }
