--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -5,24 +5,28 @@
     justify-content: space-around;
     margin-block-start: em(40px);
 
-    &>* {
-        grid-column: 1;
+    .bread-crumbs {
+        display: none;
     }
 
     .cta-container {
-        grid-column: 1;
+        grid-column: 2;
         grid-row: 4;
         position: static;
         width: 100%;
-        margin-bottom: rem(42px);
+        margin-block-end: rem(42px);
     }
 
     .owner-details-container {
+        grid-column: 1/-1;
         display: flex;
-        gap: em(22px);
         flex-direction: column-reverse;
-        margin-bottom: em(-13px);
         margin-block-end: em(27px);
+
+        &>*:not(.carousel-container) {
+            padding-inline: rem(12px);
+            margin-block-end: em(15px);
+        }
 
         .owner-details {
             display: flex;
@@ -84,6 +88,9 @@
         .profile-container {
             display: flex;
             gap: rem(12px);
+            background-color: $light-clr1;
+            border-bottom: 1px solid $light-clr5;
+            padding-block: em(10px);
         }
     }
 
@@ -103,12 +110,12 @@
         .gig-description {
             color: $dark-clr-1;
             line-height: em(24px);
-            margin-bottom: em(23px);
+            margin-block-end: em(23px);
         }
     }
 
     .about-seller {
-        margin-bottom: em(29px);
+        margin-block-end: em(29px);
         font-size: 1.25rem;
         line-height: 28px;
     }
@@ -118,13 +125,13 @@
         position: relative;
         width: 100%;
         max-width: $details-carousel-width;
+        height: $details-carousel-height-mobile;
 
         .carousel {
             position: static;
             width: 100%;
 
             &.carousel-slider {
-                // height: rem($details-carousel-height);
                 max-width: $details-carousel-width;
 
                 .slide {
@@ -138,16 +145,28 @@
             }
 
             .arrow {
-                @include gallery-btn;
+                width: auto;
+                height: auto;
+                padding: 0;
+                border-radius: unset;
+                background-color: transparent;
+                box-shadow: none;
+                font-size: 40px;
+                position: absolute;
+                color: white;
+                text-shadow: 1px 1px 15px $dark-clr-1;
                 top: calc($details-carousel-height-mobile / 2 - $arrow-btn-size / 2);
+
             }
 
             .next-btn {
-                right: calc(-1 * $arrow-btn-size / 2);
+                right: em(5px);
+                z-index: 2;
             }
 
             .prev-btn {
-                left: calc(-1 * $arrow-btn-size / 2);
+                left: em(5px);
+                z-index: 2;
             }
         }
     }
@@ -176,11 +195,14 @@
 
 
     @include for-small-layout {
-        grid-template-columns: 1fr;
         grid-auto-flow: row;
 
+        .bread-crumbs {
+            display: flex;
+        }
+
         .cta-container {
-            grid-column: 1/-1;
+            grid-column: 2;
             grid-row: 4;
             width: unset;
             justify-self: unset;
@@ -190,15 +212,27 @@
         }
 
         .carousel-container {
-            margin-bottom: 1.875rem;
-
+            height: auto;
             max-width: unset;
             grid-row: 3;
+            margin-block-end: 1.875rem;
 
             .carousel {
 
                 .arrow {
+                    @include gallery-btn;
+                    text-shadow: none;
                     top: calc($details-carousel-height / 2 - $arrow-btn-size / 2);
+                }
+
+                .next-btn {
+                    // right: em(5px);
+                    right: calc(-1 * $arrow-btn-size / 2);
+                }
+
+                .prev-btn {
+                    // left: em(5px);
+                    left: calc(-1 * $arrow-btn-size / 2);
                 }
 
                 .thumbs-wrapper {
@@ -224,10 +258,21 @@
         }
 
         .owner-details-container {
+            grid-column: 2;
             flex-direction: column;
 
+            &>*:not(.carousel-container) {
+                padding-inline: unset;
+                margin-inline: unset;
+            }
+
             .profile-container {
+                background-color: unset;
+                border-bottom: unset;
+                padding-block: unset;
+
                 .owner-details {
+                    grid-column: 1/-1;
                     flex-direction: row;
                     align-items: center;
                 }
@@ -239,10 +284,14 @@
     @include for-narrow-layout {}
 
     @include for-normal-layout {
-        grid-template-columns: 1.5fr 1fr;
+        grid-template-columns: minmax(32px, 1fr) minmax(auto, 860px) minmax(auto, 500px) minmax(32px, 1fr);
+
+        &>*:not(.cta-container) {
+            grid-column: 2;
+        }
 
         .cta-container {
-            grid-column: 2;
+            grid-column: 3;
             grid-row: 2;
             position: sticky;
             top: 14vh;
@@ -252,14 +301,13 @@
 
         .carousel-container {
             max-width: $details-carousel-width;
-            ;
+
 
 
             .carousel {
                 width: 100%;
 
                 &.carousel-slider {
-                    // height: rem($details-carousel-height);
                     max-width: $details-carousel-width;
 
                     .slide {
@@ -275,6 +323,8 @@
         }
 
         .owner-details-container {
+            grid-column: 1/-1;
+
             .profile-container {
                 .owner-details {
                     flex-direction: column;
@@ -288,7 +338,7 @@
     @include for-large-layout {}
 
     @include for-xl-layout {
-        padding-inline: rem(32px);
+        // padding-inline: rem(32px);
     }
 
 }
