A logged in user can view any user's profile

--- a/src/assets/styles/views/UserDetails.scss
+++ b/src/assets/styles/views/UserDetails.scss
@@ -508,6 +508,11 @@
                 }
             }
         }
-    }
 
+    }
+    
+    .user-gigs-preview{
+        font-size: rem(20px);
+    }
+    
 }
