Change Join-btn bg-color when header is transparent

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -41,6 +41,7 @@
 
                         &:hover {
                             border-color: transparent;
+                            background-color: $accent-clr;
                         }
                     }
                 }
