--- a/src/assets/styles/views/AddGig.scss
+++ b/src/assets/styles/views/AddGig.scss
@@ -1,8 +1,9 @@
 .add-gig {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: rem(50px);
-    margin-top: rem(65px);
+    grid-template-columns: auto 1fr;
+    gap: 29px;
+    margin-top: 3.125rem;
+    padding-inline: 29px;
 
     .create-gig {
         display: flex;
@@ -71,7 +72,7 @@
 
         .package-options {
             width: rem(524px); //temporary (until MQ)
-
+            margin-bottom: 2rem;
             button {
                 flex: 1;
                 font-weight: 700;
@@ -95,9 +96,9 @@
             font-weight: 700;
             display: flex;
             flex-direction: column;
-            gap: em(7px);
+            gap: 1rem;
             color: $dark-clr;
-            margin-bottom: 5px;
+            margin-bottom: 12px;
 
             &.imgs {
                 margin-block: 15px 25px;
@@ -159,16 +160,18 @@
     }
 
     .big-gig-preview {
-        width: 60%;
+        
+        width: 26em;
         position: sticky;
         top: 15vh;
         height: fit-content;
         display: flex;
         flex-direction: column;
-        justify-self: center;
-        border: em(2px) solid $dark-clr-2;
-        padding: em(14px) em(24px);
-        gap: em(10px);
+        justify-self: end;
+        border: 0.125em solid #e5e5e7;
+        padding: 0.875em 1.5em;
+        gap: 0.625em;
+        
 
         .preview-heading {
             text-align: center;
@@ -222,6 +225,51 @@
             }
         }
     }
+    @include for-xs-small-layout{
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-auto-flow: row;
+            gap: 5px;
+            margin-top: 3.125rem;
+            padding-inline: 0;
+            .create-gig{
+                place-items: center;
+                .sub-heading {
+                    text-align: center;
+                }
+                .package-options {
+                    width: 72vw;
+                    margin-bottom: 2rem;
+                }
+            }
+           .big-gig-preview {
+                place-self: center;
+            }
+    }
+    
+    @include for-normal-layout{
+        display: grid;
+        grid-template-columns: auto 1fr;
+        gap: 29px;
+        margin-top: 3.125rem;
+        padding-inline: 29px;
+        .create-gig{
+            place-items: start;
+            .sub-heading {
+                text-align: start;
+            }
+            .package-options {
+                width: 25em;
+                // margin-bottom: 1rem;
+                margin: 0 9% 2rem 9%;
+            }
+        }
+        .big-gig-preview {
+            position: sticky;
+            top: 15vh;
+            place-self: start;
+        }
+}
 }
 
 .MuiList-root {
