--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -68,7 +68,7 @@
 @import "cmps/DashboardCard.scss";
 @import "cmps/AddGigCard.scss";
 @import "cmps/MyGigsTable.scss";
-@import "cmps/YesNoModal.scss";
+@import "cmps/OrderModal.scss";
 @import "cmps/Paginations.scss";
 @import "cmps/FilterPill.scss";
 @import "cmps/BreadCrumbs.scss";
