--- a/src/assets/styles/cmps/OrderModal.scss
+++ b/src/assets/styles/cmps/OrderModal.scss
@@ -3,14 +3,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60vw;
-    height: 60vh;
+    width: 50vw;
+    max-height: 80vh;
     background-color: $light-clr;
     border: 1px solid $modal-filter-border-clr;
     border-radius: 12px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
     z-index: 100;
-    overflow: auto;
+    overflow: hidden;
     text-align: center;
 
     .header {
@@ -24,15 +24,75 @@
     .content {
         padding: 20px;
         text-align: left;
+
         .mini-user {
+            justify-content: center;
             align-items: center;
+
             img {
                 width: rem(45px);
                 border-radius: 50%;
+                cursor: pointer;
             }
-            
+
             h4 {
                 margin-inline: rem(8px);
+                cursor: pointer;
+            }
+
+            .bold {
+                font-weight: 600;
+            }
+        }
+
+        .contact-buyer {
+            justify-content: center;
+            align-items: center;
+
+            button {
+                font-size: rem(14px);
+                line-height: rem(14px);
+                padding: 10px 28px;
+                background-color: $accent-clr;
+                font-weight: 600;
+                color: $light-clr !important;
+                border: 1px solid transparent;
+                border-radius: 4px;
+                transition: color .2s, background-color .2s, box-shadow .2s, border .2s;
+                margin-block-end: rem(8px);
+
+                &:hover {
+                    background-color: $dark-accent-clr;
+                }
+            }
+        }
+
+        .info {
+            margin-block: rem(8px);
+            padding-block: rem(10px);
+            text-align: center;
+
+            .top {
+                color: $accent-clr ;
+                margin-block-end: rem(8px);
+                font-size: rem(18px);
+            }
+
+            ul {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: center;
+                gap: rem(15px);
+
+                li {
+                    display: flex;
+                    width: 60%;
+                    justify-content: space-between;
+                    color: $co-clr;
+                    color: $dark-clr-1;
+                    font-weight: 700;
+                }
             }
         }
     }
