--- a/src/assets/styles/cmps/DynamicBtn.scss
+++ b/src/assets/styles/cmps/DynamicBtn.scss
@@ -1,65 +1,79 @@
-.filter-btn {
-    position: relative;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-    text-align: start;
-    
-    min-width: 50px;
-    min-height: 48px;
-    padding: 12px 16px;
-    border: 1px solid $light-clr2;
-    border-radius: 8px;
-    margin-block: 32px;
+.filter-btns-container {
+    position: sticky;
+    z-index: 3;
+    top: 0;
+    background: $light-clr;
 
-    &:not(:last-child) {
-        margin-inline-end: 12px
-    }
-    
-    color: $dark-clr;
-    background-color: $light-clr;
-    transition:0.14s;
-
-    &:focus {
-        background-color: $light-clr1;
+    &.sticky-active {
+        box-shadow: 0 em(0.266px) em(1.13052px) rgba(0, 0, 0, .069), 0 em(0.89345px) em(3.79717px) rgba(0, 0, 0, .101), 0 em(5px) em(17px) rgba(0, 0, 0, .17);
     }
 
-    &:hover {
-        border: 1px solid $dark-clr1;
-    }
 
-    .btns {
-        position: relative;
-    }
-    
-    .icon {
-        &.fa-solid.angle-down::before {
-            font-family: fa-solid;
+    .filter-btns {
+        .filter-btn {
+            position: relative;
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 24px;
+            text-align: start;
+
+            min-width: 50px;
+            min-height: 48px;
+            padding: 12px 16px;
+            border: 1px solid $light-clr2;
+            border-radius: 8px;
+            margin-block: 32px;
+
+            &:not(:last-child) {
+                margin-inline-end: 12px
+            }
+
+            color: $dark-clr;
+            background-color: $light-clr;
+            transition:0.14s;
+
+            &:focus {
+                background-color: $light-clr1;
+            }
+
+            &:hover {
+                border: 1px solid $dark-clr1;
+            }
+
+            .btns {
+                position: relative;
+            }
+
+            .icon {
+                &.fa-solid.angle-down::before {
+                    font-family: fa-solid;
+                }
+
+                &.fa-solid.angle-down::after {
+                    content: " \f107";
+                }
+
+                &.fa-solid.angle-up::before {
+                    font-family: fa-solid;
+                }
+
+                &.fa-solid.angle-up::after {
+                    content: " \f106";
+                }
+            }
+
+            &.rotate-up {
+                icon {
+                    transform: rotate(-180deg);
+                }
+            }
+
+            &.rotate-down {
+                .icon {
+                    transform: rotate(0deg);
+                }
+            }
+
         }
-        
-        &.fa-solid.angle-down::after {
-            content: " \f107";
-        }
-
-        &.fa-solid.angle-up::before {
-            font-family: fa-solid;
-        }
-
-        &.fa-solid.angle-up::after {
-            content: " \f106";
-        }
     }
-
-    &.rotate-up {
-        icon {
-            transform: rotate(-180deg);
-        }
-    }
-
-    &.rotate-down {
-        .icon {
-            transform: rotate(0deg);
-        }
-    }
-
 }
