Redesign for order modal

--- a/src/assets/styles/cmps/OrderModal.scss
+++ b/src/assets/styles/cmps/OrderModal.scss
@@ -40,6 +40,10 @@
                 cursor: pointer;
             }
 
+            .msg {
+                margin-inline: rem(8px);
+            }
+
             .bold {
                 font-weight: 600;
             }
