--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $accent-clr: #1dbf73;
-$dark-accent-clr: #19a463;;
+$dark-accent-clr: #19a463;
+;
 $darkest-clr: #0e0e0f;
 $dark-clr1: #222325;
 $dark-clr: #404145;
@@ -30,6 +31,7 @@ $modal-filter-border-clr: #dadbdd;
 $home-light-clr: #f1fdf7;
 $trusted-by-clr: #b5b6ba;
 $trusted-by-bg-clr: #f5f5f5;
+$backdrop-bg-clr: #00000066;
 
 //User colors 
 $co-clr: #7a7d85;
