Change callToActions top

--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -2,7 +2,7 @@
      grid-column: 2;
      grid-row: 2;
      position: sticky;
-     top: 14vh;
+     top: rem(20px);
      justify-self: end;
      width: em(412px);
 
