--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -308,7 +308,7 @@
             grid-column: 3;
             grid-row: 2;
             position: sticky;
-            top: 14vh;
+            top: rem(20px);
             justify-self: end;
             width: em(412px);
         }
