--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $accent-clr: #1dbf73;
-$dark-accent-clr: #19a463;;
+$dark-accent-clr: #19a463;
+;
 $darkest-clr: #0e0e0f;
 $dark-clr1: #222325;
 $dark-clr: #404145;
@@ -58,7 +59,9 @@ $details-carousel-width: 700px;
 // Breakpoints
 $xs-mobile-breakpoint: 300px;
 $mobile-breakpoint: 600px;
+$extraNarrow-breakpoint: 700px;
 $narrow-breakpoint: 800px;
+$wideNormal-breakpoint: 1075px;
 $normal-breakpoint: 1155px;
 $large-breakpoint: 1235px;
 $xl-breakpoint: 1380px;
