--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,6 +1,7 @@
 .main-layout {
     display: grid;
     grid-template-columns: minmax(12px, 1fr) minmax(auto, $xs-mobile-breakpoint) minmax(12px, 1fr);
+
     >*.full {
         grid-column: 1 / -1;
     }
@@ -44,14 +45,15 @@
 
 .gigs-layout {
     display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(309px, 1fr));
     grid-gap: em(32px);
 }
 
 .user-layout {
     display: grid;
-    grid-template-columns:minmax(200px, 1fr);
+    grid-template-columns: minmax(200px, 1fr);
     // grid-gap: em(28px);
-    
+
     @include for-extraNarrow-layout {
         grid-template-columns: minmax(260px, 1fr) minmax(260px, 1fr);
         grid-gap: em(26px);
