--- a/src/assets/styles/cmps/FilterPill.scss
+++ b/src/assets/styles/cmps/FilterPill.scss
@@ -1,6 +1,6 @@
 .pills-container {
     display: flex;
-    margin-block-end: em(24px);
+    margin-block: em(16px);
 
     .filter-pill {
         display: flex;
