--- a/src/assets/styles/views/AddGig.scss
+++ b/src/assets/styles/views/AddGig.scss
@@ -1,11 +1,16 @@
 .add-gig {
     display: grid;
-    grid-template-columns: auto 1fr;
-    gap: 29px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
     margin-top: 3.125rem;
-    padding-inline: 29px;
 
     .create-gig {
+
+        &> {
+            min-width: 100%;
+        }
+
         display: flex;
         flex-direction: column;
         align-items: start;
@@ -30,8 +35,6 @@
 
         .numbers {
             .form-label {
-                // min-width: 100%;
-
                 .delivery-icon {
                     margin: em(5px);
                     color: $dark-clr-3;
@@ -71,7 +74,7 @@
 
 
         .package-options {
-            width: rem(524px); //temporary (until MQ)
+            width: 100%;
             margin-bottom: 2rem;
 
             button {
@@ -92,7 +95,7 @@
         }
 
         .form-label {
-            min-width: 80%;
+            min-width: 100%;
             font-size: 1.3rem;
             font-weight: 700;
             display: flex;
@@ -100,6 +103,11 @@
             gap: 1rem;
             color: $dark-clr;
             margin-bottom: 12px;
+
+            &.price,
+            &.days-to-make {
+                min-width: unset;
+            }
 
             &.imgs {
                 margin-block: 15px 25px;
@@ -109,7 +117,6 @@
                 .upload-preview {
                     background-color: $light-clr2;
                     border-radius: em(5px);
-                    padding-inline: em(7px);
 
                     img {
                         display: none;
@@ -144,7 +151,7 @@
         }
 
         .send {
-            width: 80%;
+            min-width: 80%;
             font-size: 1.3rem;
             background-color: $dark-clr;
             margin-block-start: rem(10px);
@@ -161,21 +168,27 @@
     }
 
     .big-gig-preview {
+        box-shadow: rem(2px) rem(2px) rem(15px) #00000050;
+        display: grid;
+        font-size: rem(12px);
 
-        width: 26em;
         position: sticky;
-        top: rem(20px);
         height: fit-content;
-        display: flex;
-        flex-direction: column;
         justify-self: end;
         border: 0.125em solid #e5e5e7;
         padding: 0.875em 1.5em;
         gap: 0.625em;
 
+        width: 100%;
+        flex-direction: row;
+        bottom: em(8px);
+        right: em(10px);
+        z-index: 2;
+        background-color: $light-clr;
+
 
         .preview-heading {
-            text-align: center;
+            display: none;
             color: $dark-clr-4;
             text-transform: uppercase;
             font-weight: 400;
@@ -183,7 +196,8 @@
         }
 
         img {
-            width: 100%;
+            place-self: center;
+            width: 40%;
             object-fit: cover;
             max-height: 300px;
         }
@@ -199,7 +213,9 @@
         }
 
         .gig-preview-details {
-            display: grid;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
             gap: em(10px);
             max-width: 100%;
 
@@ -211,6 +227,7 @@
             }
 
             .description {
+                display: none;
                 font-weight: 400;
             }
 
@@ -220,45 +237,56 @@
                 font-size: 1.2rem;
 
                 .title {
+                    display: none;
                     font-weight: 700;
                     font-size: 1.3rem;
                 }
             }
+
+            .tags {
+                display: none;
+            }
         }
     }
 
-    @include for-xs-small-layout {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-auto-flow: row;
-        gap: 5px;
+    @include for-small-layout {
         margin-top: 3.125rem;
         padding-inline: 0;
 
         .create-gig {
-            place-items: center;
-
-            .sub-heading {
-                text-align: center;
-            }
-
             .package-options {
-                width: 72vw;
+
                 margin-bottom: 2rem;
             }
         }
 
         .big-gig-preview {
             place-self: center;
+            font-size: 1rem;
+
+
+            .preview-heading {
+                display: unset;
+                text-align: center;
+            }
+
+
+            .gig-preview-details {
+                .title {
+                    display: unset;
+                }
+
+                .tags {
+                    display: unset;
+                }
+            }
+
         }
     }
 
-    @include for-normal-layout {
-        display: grid;
-        grid-template-columns: auto 1fr;
-        gap: 29px;
+    @include for-narrow-layout {
+        grid-template-columns: 2fr 1.3fr;
         margin-top: 3.125rem;
-        padding-inline: 29px;
 
         .create-gig {
             place-items: start;
@@ -267,20 +295,45 @@
                 text-align: start;
             }
 
+            .form-label {
+                min-width: 80%;
+            }
+
             .package-options {
                 width: 80%;
-                // margin-bottom: 1rem;
-                // margin: 0 9% 2rem 9%;
                 align-items: start;
             }
         }
 
         .big-gig-preview {
-            position: sticky;
+            display: flex;
+            flex-direction: column;
+            box-shadow: none;
             top: rem(20px);
             place-self: start;
+
+            img {
+                width: 100%;
+            }
+
+            .gig-preview-details {
+                flex-direction: column;
+                align-items: unset;
+
+                .description {
+                    display: unset;
+                }
+
+            }
+
         }
     }
+
+    @include for-large-layout {
+        grid-template-columns: 2fr 1fr;
+    }
+
+
 }
 
 .MuiList-root {
