--- a/src/assets/styles/views/AddGig.scss
+++ b/src/assets/styles/views/AddGig.scss
@@ -122,8 +122,21 @@
                         display: none;
                     }
 
+                    .user-info-label {
+                        display: flex;
+                        align-items: center;
+                        gap: rem(15px);
+                        padding: rem(10px);
+
+                        .cloud-icon {
+                            font-size: rem(40px);
+                        }
+
+                    }
+
                     input {
                         border: 0;
+                        display: none;
                     }
                 }
             }
@@ -151,6 +164,7 @@
         }
 
         .send {
+            width: 100%;
             min-width: 80%;
             font-size: 1.3rem;
             background-color: $dark-clr;
@@ -178,7 +192,7 @@
         border: 0.125em solid #e5e5e7;
         padding: 0.875em 1.5em;
         gap: 0.625em;
-
+        margin-block: rem(35px);
         width: 100%;
         flex-direction: row;
         bottom: em(8px);
@@ -255,7 +269,6 @@
 
         .create-gig {
             .package-options {
-
                 margin-bottom: 2rem;
             }
         }
@@ -302,6 +315,10 @@
             .package-options {
                 width: 80%;
                 align-items: start;
+            }
+
+            .send {
+                width: unset;
             }
         }
 
