--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -64,5 +64,6 @@ $extraNarrow-breakpoint: 700px;
 $narrow-breakpoint: 800px;
 $wideNormal-breakpoint: 1075px;
 $normal-breakpoint: 1155px;
-$large-breakpoint: 1235px;
-$xl-breakpoint: 1380px;
+$large-breakpoint: 1370px;
+$xl-breakpoint: 1410px;
+$xxl-breakpoint: 1640px;
