--- a/src/assets/styles/cmps/DashboardModal.scss
+++ b/src/assets/styles/cmps/DashboardModal.scss
@@ -4,16 +4,17 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90vw;
-    height: 90vh;
+    max-height: 90vh;
     background-color: $light-clr;
     border: 1px solid #ccc;
     border-radius: 12px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
     z-index: 100;
     overflow: auto;
+    overflow-x: hidden;
 
     .nav-content {
-        grid-column: 1;
+        display: none;
         padding: 20px;
 
         .logo {
@@ -60,10 +61,15 @@
             }
         }
 
+        @media only screen and (min-width: $xl-breakpoint) {
+            display: block;
+            grid-column: 1;
+        }
+
     }
 
     .dashboard-content {
-        grid-column: 3;
+        grid-column: 1;
         padding: rem(26px);
 
         .header {
@@ -117,6 +123,49 @@
                 }
             }
 
+
+        }
+
+        .small-screens {
+            margin-block: rem(16px);
+            text-align: left;
+            padding-block-end: rem(12px);
+            border-bottom: 1px solid $accent-clr;
+
+            button {
+                font-size: rem(20px);
+                font-weight: 500;
+                text-align: left;
+
+                background: none;
+                color: $list-subtitle-clr;
+
+
+                span {
+                    margin-inline-end: rem(10px);
+                }
+
+                &:hover {
+                    color: $accent-clr;
+                }
+
+                &:focus {
+                    color: $accent-clr;
+                }
+
+                &.active {
+                    color: $accent-clr;
+                }
+            }
+            
+            .data-btn {
+                display: none;
+            }
+
+            @media only screen and (min-width: $xl-breakpoint) {
+                display: none;
+                grid-column: 5;
+            }
         }
 
         .orders-data {
@@ -125,7 +174,7 @@
             .compare-orders {
                 background-color: $light-clr;
                 height: rem(200px);
-                width: rem(450px);
+                min-width: 38rem;
                 border: 1px solid #10e582;
                 border-radius: 12px;
                 padding: rem(16px);
@@ -137,6 +186,10 @@
                     font-size: rem(14px);
                     font-weight: 800;
                     padding-block-end: rem(8px);
+                }
+
+                @media only screen and (min-width: $xl-breakpoint) {
+                    min-width: rem(505px);
                 }
             }
         }
@@ -266,11 +319,14 @@
             border-radius: 12px;
         }
 
+        @media only screen and (min-width: $xl-breakpoint) {
+            grid-column: 3;
+        }
 
     }
 
     .user-info {
-        grid-column: 5;
+        display: none;
         padding: 20px;
         margin-inline: auto;
         position: relative;
@@ -331,8 +387,13 @@
                 margin-inline-start: 20%;
             }
 
+
         }
 
+        @media only screen and (min-width: $xxl-breakpoint) {
+            display: block;
+            grid-column: 5;
+        }
     }
 
     .icon {
@@ -358,8 +419,17 @@
     }
 
     .space2 {
-        grid-column: 4;
+        display: none;
         background-color: $light-clr4;
+
+        @media only screen and (min-width: $xxl-breakpoint) {
+            display: block;
+            grid-column: 4;
+        }
+    }
+
+    @media only screen and (min-width: $xxl-breakpoint) {
+        height: 90vh
     }
 }
 
